--- a/.env
+++ b/.env
@@ -5,7 +5,12 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:@localhost:3306/mcq_eni?schema=public"
-PORT= 3000
+#DATABASE_URL="mysql://root:9qUTsIMUpxlgHde6q5AI@containers-us-west-106.railway.app:5858/railway"
+PORT= 4000
+#URL_FRONT = "http://localhost:3000"
+#URL_FRONT = "https://dandelions-front.netlify.app"
+URL_BACK = "http://localhost:4000"
+#URL_BACK = "https://dandelions-back-production.up.railway.app"
 
 MAILER_EMAIL = 'mitchspiron28@gmail.com'
 MAILER_PASSWORD = 'lxzxhwdvrocaykcx'
