fix: update user info

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@
 
 DATABASE_URL="mysql://root:@localhost:3306/mcq_eni?schema=public"
 PORT= 3000
+URL_BACK = http://localhost:3000
 
 MAILER_EMAIL = 'mitchspiron28@gmail.com'
 MAILER_PASSWORD = 'lxzxhwdvrocaykcx'
